--- a/CocktailMagician/CocktailMagician.Models/CocktailMagician.Models.csproj
+++ b/CocktailMagician/CocktailMagician.Models/CocktailMagician.Models.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
