--- a/CocktailMagician/CocktailMagician/CocktailMagician.Web.csproj
+++ b/CocktailMagician/CocktailMagician/CocktailMagician.Web.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\CocktailMagician.Services\CocktailMagician.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
+  </ItemGroup>
+
 </Project>
